[tool.poetry]
name = "rwv"
version = "0.0.1"
description = "Race walking visualizer"
license = "MIT"
authors = [
	"Yuchao Li <ycl25@drexel.edu>",
	"Ethan Harriz <ejh336@drexel.edu>",
	"Manish Patel <mtp75@drexel.edu>",
]

[tool.poetry.dependencies]
python = "~3.11"
seaborn = "^0.13.0"
pandas = "^2.1.1"
pyqt6 = "^6.5.3"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"
pyinstaller = "^6.1.0"

[tool.poetry.scripts]
rwv = "rwv.main:main"

[tool.black]
max-line-length = 100
