[tool.poetry]
name = "Endurance"
version = "0.0.1"
description = "A race walking data visualizer"
license = "MIT"
authors = [
	"Yuchao Li <ycl25@drexel.edu>",
	"Ethan Harriz <ejh336@drexel.edu>",
	"Manish Patel <mtp75@drexel.edu>",
	"Mathew Cerny <mbc88@drexel.edu>",
	"Caraton Dixon <cd3258@drexel.edu>",
	"Andrew Rodebaugh <ajr439@drexel.edu>"
]

[tool.poetry.dependencies]
python = "~3.11"
matplotlib = "^3.8.4"
pandas = "^2.1.2"
pyqt6 = "^6.6.0"
python-pptx = "^0.6.23"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^7.4.2"
pyinstaller = "^6.1.0"
sphinx = "^7.2.6"
appmap = "^1.19.0"
pytest-qt = "^4.4.0"
pyarrow = "^15.0.0"

[tool.poetry.scripts]
endurance = "endurance.main:main"

[tool.black]
max-line-length = 100
